--- a/WhiteBook/appsettings.json
+++ b/WhiteBook/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection1": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WhiteBook.Web-96AD9EEA-6050-43A7-83E8-488FE89EBE7E;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Data Source=ICORE7;Initial Catalog=WhiteBook;Persist Security Info=True;User ID=sa;Password=sql1c"
+    
+    "DefaultConnection": "Data Source=****;Initial Catalog=WhiteBook;Persist Security Info=True;User ID=***;Password=***"
   },
 
   "Logging": {
